Fixing the overflow of some elements, white block on site

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,10 @@
 html {
   scroll-behavior: smooth;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100%;
+}
